style.css
body {
  margin: 0;
  overflow: hidden;
  touch-action: none; /* no touch manipulation */
}

/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #19d1d9;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #004987;
  border-radius: 1rem;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #00d57e;
}

.btn-try-again {
  background-image: url("assets/img/6.Botones/Try again/Recurso 15.png");
  background-repeat: no-repeat;
  background-size: 100%;
  border-radius: 0.3rem;
  background-color: transparent;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  cursor: pointer;
  border-style: none;
  height: 38px;
  width: 160px;
}

.btn-continue {
  background-image: url("assets/continue.png");
  background-repeat: no-repeat;
  background-size: 100%;
  border-radius: 0.3rem;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  cursor: pointer;
  border-style: none;
  height: 33px;
  width: 100px;
}

.menu-background {
  background-image: url("assets/background.png");
  background-repeat: round;
  background-size: cover;
  height: 100svh;
  width: 100svw;
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.btn-menu {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 24px;
}

.btn-start {
  background-image: url("assets/img/6.Botones/Start/3.png");
  background-repeat: no-repeat;
  background-size: 100%;
  background-color: transparent;
  cursor: pointer;
  border-style: none;
  height: 52px;
  width: 160px;
}

.btn-legal-notice {
  background-image: url("assets/legal-notice-chat.png");
  background-repeat: no-repeat;
  background-color: transparent;
  background-size: 100%;
  cursor: pointer;
  border-style: none;
  height: 72px;
  width: 120px;
}

.hero-title {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.hero {
  background-image: url("assets/sharkie-background.png");
  background-repeat: round;
  background-size: cover;
  height: 80px;
  width: 160px;
}

#victory-screen {
  background-image: url("assets/img/6.Botones/Tittles/You win/Mesa de trabajo 1.png");
  background-repeat: round;
  background-size: cover;
  height: 100svh;
  width: 100svw;
}

#canvas {
  width: 100svw;
  height: 100svh;
  display: block;
}

.legal-notice {
  height: 50%;
  width: 30%;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border: 4px #ffc049;
  border-style: solid;
  background-color: #46e9d9;
}

.legal-notice-text {
  overflow-y: scroll;
  height: 80%;
}

.sharkie-title {
  background-image: url("assets/sharkie-title.png");
  background-repeat: round;
  background-size: cover;
  height: 10svh;
  width: 20svw;
}

header {
  display: flex;
  justify-content: space-between;
  position: sticky;
  top: 0;
  background-color: #46e9d9;
}

.close-button {
  cursor: pointer;
}

.close-icon {
  background-color: #ffc049;
  border-radius: 1.5rem;
}

.d-none {
  display: none;
}

.d-flex {
  display: flex;
}

.img-phone {
  height: 100px;
  animation-name: turn;
  animation-duration: 2s;
  animation-iteration-count: infinite;
}

.text-white {
  color: rgba(238, 242, 243, 0.897);
}

#panel {
  position: absolute;
  bottom: 0;
  width: 100%;
}

.trackpad {
  display: flex;
  justify-content: space-between;
}

#joystick {
  position: relative;
  background-color: #004987;
  width: 122px; /* pad size */
  height: 122px;
  border-radius: 50%;
  border: 2px solid #ffc049;
}

#stick {
  position: absolute;
  left: 50%;
  top: 50%;
  width: 64px;
  height: 64px; /* thumb size */
  transform: translate(-50%, -50%);
  border-radius: 50%;
  border: 2px solid #ffc049;
  background: rgba(0, 0, 0, 0.7);
  transition: transform 80ms linear; /* kleiner Snap-Effekt beim Loslassen */
  pointer-events: none; /* damit Touches auf dem Pad landen */
}

.abilities {
  width: 244px;
  display: flex;
  gap: 16px;
}

#finslap {
  background-image: url("assets/btn-slap.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-color: #004987;
  position: relative;
  width: 50%;
  border: 4px solid #ffc049;
  border-radius: 50%;
}

#bubbleshoot {
  background-image: url("assets/img/1.Sharkie/4.Attack/Bubble trap/Bubble.png");
  background-repeat: no-repeat;
  background-size: contain;
  background-position-y: center;
  background-color: #004987;
  position: relative;
  width: 50%;
  border: 4px solid #ffc049;
  border-radius: 50%;
}

@keyframes turn {
  0% {
    transform: rotate(0);
  }

  to {
    transform: rotate(90deg);
  }
}

@media screen and (orientation: portrait) {
  .landscape {
    height: 100svh;
    width: 100%;
    background-color: rgb(0, 0, 0, 0.8);
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  button {
    display: none;
  }
}

@media screen and (orientation: landscape) {
  .landscape {
    display: none;
  }
}

/* @media only screen and (max-width: 720px){
  #canvas{
    width: 100%;
  }
}


@media only screen and (max-height: 480px){
  #canvas{
    height: 100svh;
  }
} */

